tdf#115806: Remember last active deck also on context switch

within 1 application

Change-Id: Icab6dea9f9a7895732c41e6d96b9d4546cf0001f